samples/_failures_safe/1761317468_63d135_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_149c65d7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_149c65d7.c:152:9: error: expected expression at end of input
  152 |         if (!read_token(state, &
      |         ^~
./samples/SAFE/__tmp_149c65d7.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_149c65d7.c:152:9: error: expected declaration or statement at end of input
